added tableau link

--- a/EqUiWebUi/Views/Tableau/Index.cshtml
+++ b/EqUiWebUi/Views/Tableau/Index.cshtml
@@ -149,5 +149,9 @@
             <a href="~/tableau/Embedded4K?workbook=Equi_HOP_MalfunctionAnalysis_AFG&sheet=4KHOPAnalysis" class="btn btn-primary btn-sm">4KHOPAnalysis &raquo;</a>
             A-Shop downtime Analysis
         </p>
+        <p>
+            <a href="~/tableau/EmbeddedDesktop?workbook=TipChangeAnalysis&sheet=DashboardTipchangeAnalysis" class="btn btn-primary btn-sm">TipchangeAnalysis &raquo;</a>
+            Koper verbruik en tipchanges.
+        </p>
     </div>
 </div>
