--- a/EqUiWebUi/Views/Tableau/Index.cshtml
+++ b/EqUiWebUi/Views/Tableau/Index.cshtml
@@ -31,6 +31,11 @@
             STW040 en MAXIMO + Maximo tool
         </p>
 
+        <p>
+            <a href="~/tableau/EmbeddedDesktop?workbook=Afstart&sheet=Afstart" class="btn btn-primary btn-sm">Afstart&raquo;</a>
+            Geplande afstart situatie maximo 
+        </p>
+
         <p class="text-muted">*Als de 'maximo' tools in tableau niet automatisch laden. (chrome) ga naar <a href="https://gensvw1178.gen.volvocars.net/"> equi &raquo;</a>en klik daar op 'advanced' proceed.</p>
     </div>
 </div>
