--- a/EqUiWebUi/Views/Home/Index.cshtml
+++ b/EqUiWebUi/Views/Home/Index.cshtml
@@ -14,8 +14,8 @@
         </h5>
     </div>
     <div class="card-body ani_PulseBlueOnce">
-        <h1>SQL servers are down for housekeeping.</h1>
-        All systems are down (it is working on it)
+        <h1>Tableau data is down.</h1>
+        Tableau data refresh unavailable. Waiting for support from Sweden.
     </div>
 </div>
 
