--- a/EqUiWebUi/Areas/Welding/Views/Launch/ComparePitchV316.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/Launch/ComparePitchV316.cshtml
@@ -8,12 +8,17 @@
 <h2>DoubleSpotCheck</h2>
 
 @Html.Grid(Model).Named("ComparePitchV316").Build(columns =>
+
 {
+    
+   
+ 
+
     columns.Add(c => c.timerNumber).Titled("TimerNumber");
     columns.Add(c => c.lastWeldTime).Titled("lastWeldTime");
- //   columns.Add(c => c.spotid).Titled("spotid");
-    columns.Add(c => c.Timer).Titled("TimerInPitch");
-    //columns.Add(c => c.Variant).Titled("Variant");
+   
+    columns.Add(c => c.AlternativeNumber).Titled("spotID");
+    columns.Add(c => c.Timer).Titled("Timer");
     columns.Add(c => c.lastULControleTime).Titled("ULControl?").Formatted("{0:dd-MM-yyyy HH:mm:ss}");
 
 
