implementing housekeeping system.

--- a/EqUiWebUi/Areas/HangfireArea/Views/Job/_settings.cshtml
+++ b/EqUiWebUi/Areas/HangfireArea/Views/Job/_settings.cshtml
@@ -11,5 +11,7 @@
 
         <p><a href="~/HangfireArea/c_schedule/index" class="btn btn-danger btn-sm">c_schedule &raquo;</a>Make hangfire c_schedule.</p>
         <p><a href="~/HangfireArea/c_job/index" class="btn btn-danger btn-sm">c_job &raquo;</a>Make hangfire c_job.</p>
+
+        <p><a href="~/c_housekeeping/index" class="btn btn-danger btn-sm">c_housekeeping &raquo;</a>Make houskeeping job.</p>
     </div>
 </div>
