--- a/EqUiWebUi/Views/c_datasource/Index.cshtml
+++ b/EqUiWebUi/Views/c_datasource/Index.cshtml
@@ -1,4 +1,7 @@
 ﻿@model IEnumerable<EqUiWebUi.Models.c_datasource>
+@{
+    ViewBag.Title = "Index c_datasource";
+}
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
