--- a/EqUiWebUi/Views/c_housekeeping/Index.cshtml
+++ b/EqUiWebUi/Views/c_housekeeping/Index.cshtml
@@ -14,6 +14,7 @@
     columns.Add(c => c.id).Titled("id").InitialSort(GridSortOrder.Asc);
     columns.Add(c => c.c_schedule.name).Titled("scheduleName");
     columns.Add(c => c.Name).Titled("Name");
+    columns.Add(c => c.SchemaName).Titled("SchemaName");
     columns.Add(c => c.TableName).Titled("TableName");
     columns.Add(c => c.nDaysKeepHistory).Titled("KeepDays");
     columns.Add(c => c)
