--- a/EqUiWebUi/Areas/Welding/Views/Launch/Index.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/Launch/Index.cshtml
@@ -17,14 +17,28 @@
     <div class="card">
         <div class="card-header bg-dark">
             <h5 class="card-title text-white">
-                Launch Tools
+                Follow up list launch Work
                 <span class="clickable float-right"><i class="far fa-edit"></i></span>
             </h5>
         </div>
         <div class="card-body">
-
             <p>
-            @MyHtmlHelpers.EquiLink("/Welding//ToDoList_Remark/Index", "fab fa-qq", "Launch ToDoList", helperText: "Follow Up list Launch Work Welding Master")
+
+
+            @MyHtmlHelpers.EquiLink("/Welding//ToDoList_Remark/Index", "fab fa-qq", "Insert new work", helperText: "inser into Follow Up list Launch  Welding Master")
+            <p></p>
+            @MyHtmlHelpers.EquiLink("/Welding//ToDoLists/Index", "fab fa-qq", "Manage ToDoList", helperText: "Manage Follow Up list Launch Work Welding Master")
+            <p>
+
+                <div class="card">
+                    <div class="card-header bg-dark">
+                        <h5 class="card-title text-white">
+                            Launch Tools
+                            <span class="clickable float-right"><i class="far fa-edit"></i></span>
+                        </h5>
+                    </div>
+                    <div class="card-body">
+
             <p></p>
             @MyHtmlHelpers.EquiLink("/Welding/Launch/ComparePitchV316", "fab fa-qq", "Pitch compare", helperText: "Compare the Pitch file with the weldtimers en UL data")
             <p></p>
@@ -41,12 +55,12 @@
             @MyHtmlHelpers.EquiLink("/Welding/Launch/StabilityInDicationV316", "fab fa-qq", "Psf Spreiding", helperText: "Check for Std Process stability")
 
         </div>
-    </div>
-    <p></p>
+            </div>
+            <p></p>
 
- 
 
-         
+
+
 
 
 
