--- a/EqUiWebUi/Areas/Welding/Views/ToDoLists/Index.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/ToDoLists/Index.cshtml
@@ -1,22 +1,19 @@
 ﻿
-<center><h1>Launch Activity List</h1></center>
+<center><h1>Manage Launch Activity List</h1></center>
 <p></p>
 
 <div data-name="ToDoList" class="table"></div>
 
 <hr />
 
-<center><h1>Insert new Activity</h1></center>
-<p></p>
-<div data-name="ToDoList_Remarks" class="mvc-grid"></div>
 
-<hr />
 
 
 @model IEnumerable<EqUiWebUi.Areas.Welding.Models.ToDoList>
 
 @{
     ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 
