--- a/EqUiWebUi/Areas/Welding/Views/Qteam/Index.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/Qteam/Index.cshtml
@@ -19,7 +19,7 @@
 
     <p></p>
 
-    @MyHtmlHelpers.EquiLink("/Welding/Qteam/rt_ExtraControles", "fab fa-qq", "ExtraControles", helperText: "omschrijving =>> Automatische lijst met de Extra Controle")
+    @MyHtmlHelpers.EquiLink("/Welding/Qteam/rt_ExtraControles", "far fa-file-alt", "ExtraControles", helperText: "omschrijving =>> Automatische lijst met de Extra Controle")
 
 </div>
 <p></p>
@@ -34,7 +34,7 @@
 
     <p></p>
 
-    @MyHtmlHelpers.EquiLink("/Welding/Qteam/rt_AutoWorkFlowULPlans", "fab fa-qq", "Auto Plannen ", helperText: "omschrijving =>> Automatische lijst met de Ultralog plannen laatst uitgevoerd")
+    @MyHtmlHelpers.EquiLink("/Welding/Qteam/rt_AutoWorkFlowULPlans", "far fa-file-alt", "Auto Plannen ", helperText: "omschrijving =>> Automatische lijst met de Ultralog plannen laatst uitgevoerd")
 
 </div>
 <p></p>
@@ -49,7 +49,7 @@
 
     <p></p>
 
-    @MyHtmlHelpers.EquiLink("/Welding/Qteam/ULRapportering", "fab fa-qq", "Ultralog Rapport Last Week ", helperText: "omschrijving =>> Automatische lijst rapportering Ultralog")
+    @MyHtmlHelpers.EquiLink("/Welding/Qteam/ULRapportering", "far fa-file-alt", "Ultralog Rapport Last Week ", helperText: "omschrijving =>> Automatische lijst rapportering Ultralog")
 
 </div>
 <p></p>
