--- a/EqUiWebUi/Areas/Welding/Views/WM/Index.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/WM/Index.cshtml
@@ -18,10 +18,10 @@
     </div>
 
     <p></p>
-    @MyHtmlHelpers.EquiLink("/Welding/WM/TV", "fab fa-qq", "TV", helperText: "Qis system, live weldfaults factory, online timers")
+    @MyHtmlHelpers.EquiLink("/Welding/WM/TV", "far fa-file-alt", "TV", helperText: "Qis system, live weldfaults factory, online timers")
 
     <p></p>
-    @MyHtmlHelpers.EquiLink("/Welding/WM/_TimerBreakdownDatachange", "fab fa-qq", "TimerBreakdownDatachange", helperText: "All TimerBreakDowns with datachange WM")
+    @MyHtmlHelpers.EquiLink("/Welding/WM/_TimerBreakdownDatachange", "far fa-file-alt", "TimerBreakdownDatachange", helperText: "All TimerBreakDowns with datachange WM")
 
 </div>
 <p></p>
@@ -37,7 +37,7 @@
 
         <p></p>
 
-        @MyHtmlHelpers.EquiLink("/Welding/Launch", "fab fa-qq", "Tools for Launch activity", helperText: "launch data")
+        @MyHtmlHelpers.EquiLink("/Welding/Launch", "far fa-file-alt", "Tools for Launch activity", helperText: "launch data")
 
         <p></p>
 
