--- a/EqUiWebUi/Areas/Welding/Views/Welding/Index.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/Welding/Index.cshtml
@@ -40,7 +40,7 @@
     <div class="card-body">
 
         <p>
-            @MyHtmlHelpers.EquiLink("/Welding/ARO/Index", "fab fa-qq", "ARO Technician", helperText: "startpagina van het ARO team")
+            @MyHtmlHelpers.EquiLink("/Welding/ARO/Index", "far fa-file-alt", "ARO Technician", helperText: "startpagina van het ARO team")
     </div>
 </div>
 <p></p>
@@ -54,7 +54,7 @@
     <div class="card-body">
 
         <p>
-            @MyHtmlHelpers.EquiLink("/Welding/WM/Index", "fab fa-qq", "Welding Masters", helperText: "startpagina van de weldingMasters")
+            @MyHtmlHelpers.EquiLink("/Welding/WM/Index", "far fa-file-alt", "Welding Masters", helperText: "startpagina van de weldingMasters")
     </div>
 </div>
 <p></p>
@@ -68,7 +68,7 @@
     <div class="card-body">
 
         <p>
-            @MyHtmlHelpers.EquiLink("/Welding/Qteam/Index", "fab fa-qq", "Qteam", helperText: "startpagina van het Qteam")
+            @MyHtmlHelpers.EquiLink("/Welding/Qteam/Index", "far fa-file-alt", "Qteam", helperText: "startpagina van het Qteam")
     </div>
 </div>
 
@@ -85,7 +85,7 @@
     <div class="card-body">
 
         <p>
-            @MyHtmlHelpers.EquiLink("/Welding/TeardownTeam/Index", "fab fa-qq", "TeardownTeam", helperText: "startpagina van het TeardownTeam")
+            @MyHtmlHelpers.EquiLink("/Welding/TeardownTeam/Index", "far fa-file-alt", "TeardownTeam", helperText: "startpagina van het TeardownTeam")
     </div>
 </div>
 
