--- a/EqUiWebUi/Areas/Welding/Views/Launch/Index.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/Launch/Index.cshtml
@@ -25,9 +25,9 @@
             <p>
 
 
-            @MyHtmlHelpers.EquiLink("/Welding//ToDoList_Remark/Index", "fab fa-qq", "Insert new work", helperText: "inser into Follow Up list Launch  Welding Master")
+            @MyHtmlHelpers.EquiLink("/Welding//ToDoList_Remark/Index", "far fa-file-alt", "Insert new work", helperText: "inser into Follow Up list Launch  Welding Master")
             <p></p>
-            @MyHtmlHelpers.EquiLink("/Welding//ToDoLists/Index", "fab fa-qq", "Manage ToDoList", helperText: "Manage Follow Up list Launch Work Welding Master")
+            @MyHtmlHelpers.EquiLink("/Welding//ToDoLists/Index", "far fa-file-alt", "Manage ToDoList", helperText: "Manage Follow Up list Launch Work Welding Master")
             <p>
 
                 <div class="card">
@@ -40,19 +40,19 @@
                     <div class="card-body">
 
             <p></p>
-            @MyHtmlHelpers.EquiLink("/Welding/Launch/ComparePitchV316", "fab fa-qq", "Pitch compare", helperText: "Compare the Pitch file with the weldtimers en UL data")
+            @MyHtmlHelpers.EquiLink("/Welding/Launch/ComparePitchV316", "far fa-file-alt", "Pitch compare", helperText: "Compare the Pitch file with the weldtimers en UL data")
             <p></p>
-            @MyHtmlHelpers.EquiLink("/Welding/Launch/DoubleSpotcheck", "fab fa-qq", "double spots", helperText: "check after double spots in welding timers")
+            @MyHtmlHelpers.EquiLink("/Welding/Launch/DoubleSpotcheck", "far fa-file-alt", "double spots", helperText: "check after double spots in welding timers")
             <p></p>
-            @MyHtmlHelpers.EquiLink("/Welding/Launch/CheckDubbelPrograms", "fab fa-qq", "double program", helperText: "check after double programs in welding timers")
+            @MyHtmlHelpers.EquiLink("/Welding/Launch/CheckDubbelPrograms", "far fa-file-alt", "double program", helperText: "check after double programs in welding timers")
             <p></p>
-            @MyHtmlHelpers.EquiLink("/Welding/Launch/BosProgramAvailable", "fab fa-qq", "FreePrograms", helperText: "check in welding Timers for not used programs")
+            @MyHtmlHelpers.EquiLink("/Welding/Launch/BosProgramAvailable", "far fa-file-alt", "FreePrograms", helperText: "check in welding Timers for not used programs")
             <p></p>
-            @MyHtmlHelpers.EquiLink("/Welding/Launch/dressrequired", "fab fa-qq", "DressRequestNOK", helperText: "check if dress request is ok")
+            @MyHtmlHelpers.EquiLink("/Welding/Launch/dressrequired", "far fa-file-alt", "DressRequestNOK", helperText: "check if dress request is ok")
             <p></p>
-            @MyHtmlHelpers.EquiLink("/Welding/Launch/WeldtimeSpotsSetup", "fab fa-qq", "WeldtimeCheck", helperText: "check the  total weldtimes in from all spots")
+            @MyHtmlHelpers.EquiLink("/Welding/Launch/WeldtimeSpotsSetup", "far fa-file-alt", "WeldtimeCheck", helperText: "check the  total weldtimes in from all spots")
             <p></p>
-            @MyHtmlHelpers.EquiLink("/Welding/Launch/StabilityInDicationV316", "fab fa-qq", "Psf Spreiding", helperText: "Check for Std Process stability")
+            @MyHtmlHelpers.EquiLink("/Welding/Launch/StabilityInDicationV316", "far fa-file-alt", "Psf Spreiding", helperText: "Check for Std Process stability")
 
         </div>
             </div>
