--- a/EqUiWebUi/Areas/Welding/Views/TeardownTeam/Index.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/TeardownTeam/Index.cshtml
@@ -12,14 +12,14 @@
 <div class="card">
     <div class="card-header bg-primary">
         <h5 class="card-title text-white">
-           Start New Teardown  UNDER CONSTRUCTION
+            Start New Teardown  UNDER CONSTRUCTION
             <span class="clickable float-right"><i class="fas fa-tachometer-alt"></i></span>
         </h5>
     </div>
 
     <p></p>
 
-    @MyHtmlHelpers.EquiLink("/Welding/TearDown Team/TDTResults", "fab fa-qq", "Start New Teardown ", helperText: "omschrijving =>> Start New Teardown ")
+    @MyHtmlHelpers.EquiLink("/Welding/TearDown Team/TDTResults", "far fa-file-alt", "Start New Teardown ", helperText: "omschrijving =>> Start New Teardown ")
 
 </div>
 <p></p>
@@ -34,7 +34,7 @@
 
     <p></p>
 
-    @MyHtmlHelpers.EquiLink("/Welding/Qteam/ R  rt_AutoWorkFlowULPlans", "fab fa-qq", "Update a running Teardown", helperText: "omschrijving =>> Update a running Teardown")
+    @MyHtmlHelpers.EquiLink("/Welding/Qteam/ R  rt_AutoWorkFlowULPlans", "far fa-file-alt", "Update a running Teardown", helperText: "omschrijving =>> Update a running Teardown")
 
 </div>
 <p></p>
@@ -49,7 +49,7 @@
 
     <p></p>
 
-    @MyHtmlHelpers.EquiLink("/Welding/TeardownTeam/_TDTResults", "fab fa-qq", "TeardownResults", helperText: "omschrijving =>> TeardownResults")
+    @MyHtmlHelpers.EquiLink("/Welding/TeardownTeam/_TDTResults", "far fa-file-alt", "TeardownResults", helperText: "omschrijving =>> TeardownResults")
 
 </div>
 <p></p>
