--- a/EqUiWebUi/Views/Home/Contact.cshtml
+++ b/EqUiWebUi/Views/Home/Contact.cshtml
@@ -21,6 +21,7 @@
         @MyHtmlHelpers.EquiLink("https://github.com/SDEBEUL/ExcelPluginFrontEnd/graphs/commit-activity", "fab fa-github", "Github", helperText: "No secrets, every line of code is on github", OpenNewWindow: true)
     </div>
 
+    Test for jenkins
 </div>
 
 
