attempt for implementation of auto PW change for oracle but failed on db side.

--- a/EqUiWebUi/Views/c_datasource/Index.cshtml
+++ b/EqUiWebUi/Views/c_datasource/Index.cshtml
@@ -11,7 +11,8 @@
     columns.Add(c => c.Name).Titled("Name");
     columns.Add(c => c.Description).Titled("Description");
     //columns.Add(c => c.Type).Titled("Type");
-    columns.Add(c => c._db_type).Titled("_db_type").Filterable(false);
+    columns.Add(c => c._db_type).Titled("_db_type");
+    columns.Add(c => c.PwList).Titled("PwList");
     //columns.Add(c => c.ConnectionString).Titled("ConnectionString");
     columns.Add(c => c.isAlertSource).Titled("isAlertSource");
     columns.Add(c => c)
