more work on inline edit

--- a/EqUiWebUi/Views/Tableau/Index.cshtml
+++ b/EqUiWebUi/Views/Tableau/Index.cshtml
@@ -22,18 +22,23 @@
     </div>
     <div class="card-body">
         <p>
-            <a href="~/tableau/EmbeddedDesktop?workbook=MaximoStw040&sheet=BlockLayout_MaximoStw040" class="btn btn-warning btn-sm">BlockLayout&raquo;</a>
-            STW040 en MAXIMO
+            <a href="~/tableau/EmbeddedDesktop?workbook=MaximoStw040&sheet=LineLayout_MaximoStw040" class="btn btn-warning btn-sm">LineLayout&raquo;</a>
+            Line layout STW040 en MAXIMO
         </p>
 
         <p>
-            <a href="~/tableau/EmbeddedDesktop?workbook=MaximoStw040&sheet=AssetLayout_MaximoStw040" class="btn btn-primary btn-sm">AssetLayout&raquo;</a>
-            STW040 en MAXIMO + Maximo tool
+            <a href="~/tableau/EmbeddedDesktop?workbook=MaximoStw040&sheet=StationLayout_MaximoStw040" class="btn btn-warning btn-sm">StationLayout&raquo;</a>
+            Station layout STW040 en MAXIMO
+        </p>
+
+        <p>
+            <a href="~/tableau/EmbeddedDesktop?workbook=MaximoStw040&sheet=AssetLayout_MaximoStw040" class="btn btn-warning btn-sm">AssetLayout&raquo;</a>
+            Asset layout STW040 en MAXIMO + Maximo tool
         </p>
 
         <p>
             <a href="~/tableau/EmbeddedDesktop?workbook=Afstart&sheet=Afstart" class="btn btn-primary btn-sm">Afstart&raquo;</a>
-            Geplande afstart situatie maximo 
+            Geplande afstart situatie maximo
         </p>
 
         <p class="text-muted">*Als de 'maximo' tools in tableau niet automatisch laden. (chrome) ga naar <a href="https://gensvw1178.gen.volvocars.net/"> equi &raquo;</a>en klik daar op 'advanced' proceed.</p>
@@ -51,14 +56,19 @@
     </div>
     <div class="card-body">
         <p>
-            <a href="~/tableau/EmbeddedDesktop?workbook=Breakdowns&sheet=BlockLayout_Breakdown" class="btn btn-warning btn-sm">BlockLayout&raquo;</a>
-            layout met aantal storingen
+            <a href="~/tableau/EmbeddedDesktop?workbook=Breakdowns&sheet=LineLayout_Breakdown" class="btn btn-warning btn-sm">LineLevelLayout&raquo;</a>
+            Line layout met aantal storingen
+        </p>
+
+        <p>
+            <a href="~/tableau/EmbeddedDesktop?workbook=Breakdowns&sheet=StationLayout_Breakdown" class="btn btn-warning btn-sm">StationLevelLayout&raquo;</a>
+            Station layout met aantal storingen
         </p>
 
 
         <p>
-            <a href="~/tableau/EmbeddedDesktop?workbook=Breakdowns&sheet=AssetLayout_Breakdown" class="btn btn-primary btn-sm">AssetLayout&raquo;</a>
-            layout met aantal storingen + error trent grafiek
+            <a href="~/tableau/EmbeddedDesktop?workbook=Breakdowns&sheet=AssetLayout_Breakdown" class="btn btn-warning btn-sm">AssetLevelLayout&raquo;</a>
+            Asset layout met aantal storingen + error trent grafiek
         </p>
 
 
