--- a/EqUiWebUi/Views/c_housekeeping/Index.cshtml
+++ b/EqUiWebUi/Views/c_housekeeping/Index.cshtml
@@ -14,7 +14,7 @@
     columns.Add(c => c.id).Titled("id").InitialSort(GridSortOrder.Asc);
     columns.Add(c => c.c_schedule.name).Titled("scheduleName");
     columns.Add(c => c.Name).Titled("NameSimple").Css("editTestCollumSimple"); //simple sample
-    columns.Add(c => c.Name).Titled("NameFull").Css("editTestCollumFull"); //full code sample
+    columns.Add(c => "<div id="+c.id+">" + c.Name).Encoded(false).Titled("NameFull").Css("editTestCollumFull"); //full code sample
     columns.Add(c => c.SchemaName).Titled("SchemaName");
     columns.Add(c => c.TableName).Titled("TableName");
     columns.Add(c => c.nDaysKeepHistory).Titled("KeepDays");
@@ -42,6 +42,9 @@
         //subscribe to row clicked events
         $('[data-name="c_housekeepingGrid"]').mvcgrid({
             rowClicked: function (row, data, e) {
+                return;
+
+
                 //if row already has this clase close the modal
                 if ($(row).hasClass("bg-info")) {
                     $("#placeholder").remove();
@@ -71,51 +74,31 @@
         $('.editTestCollumSimple').editable('@Url.Action("UpdateLabel")');
 
         //full sample
-        function submitdata(revert, settings, submitdata) {
-            console.log("Revert text: " + revert);
-            console.log(settings);
-            console.log("User submitted text: " + submitdata.value);
-        }
-
-
-        $('.editTestCollumFull').editable("save.php", {
-            indicator: "<i class='far fa-sad-tear'></i>",
-            type: "text",
-            // only limit to three letters example
-            //pattern: "[A-Za-z]{3}",
-            onedit: function () { console.log('If I return false edition will be canceled'); return true; },
-            before: function () { console.log('Triggered before form appears') },
-            callback: function (result, settings, submitdata) {
-                console.log('Triggered after submit');
-                console.log('Result: ' + result);
-                console.log('Settings.width: ' + settings.width);
-                console.log('Submitdata: ' + submitdata.pwet);
+        $('.editTestCollumFull').editable('@Url.Action("UpdateLabel")', {
+            cssclass: 'jeditForm',
+            tooltip: 'click to edit me...',
+            width: 'none',
+            height: 'none',
+            submit: 'Ok', //Here!
+            onsubmit: function (settings, original) {
+                oldValue = original.revert;
             },
-            cancel: 'Cancel',
-            cssclass: 'custom-class',
-            cancelcssclass: 'btn btn-danger',
-            submitcssclass: 'btn btn-success',
-            maxlength: 200,
-            // select all text
-            select: true,
-            label: 'This is a label',
-            onreset: function () { console.log('Triggered before reset') },
-            onsubmit: function () { console.log('Triggered before submit') },
-            showfn: function (elem) { elem.fadeIn('slow') },
-            submit: 'Save',
-            submitdata: submitdata,
-            /* submitdata as a function example
-            submitdata : function(revert, settings, submitdata) {
-                console.log("Revert text: " + revert);
-                console.log(settings);
-                console.log("User submitted text: " + submitdata.value);
+            submitdata: function () {
+                console.log($(this));
+                return {
+                    id: $(this).data('id'),
+                    PropertyName: $(this).data('propertyname')
+                }
             },
-            */
-            tooltip: "Click to edit...",
-            width: 160
-        });
-
-
-
+            callback: function (value, settings) {
+                var jsonData = $.parseJSON(value);
+                if (jsonData.status) {
+                    $(this).text(jsonData.value);
+                }
+                else {
+                    $(this).text(oldValue);
+                }
+            }
+        })
     </script>
 }
