changes all passwords to integrated sec

--- a/EqUiWebUi/Views/Tableau/Index.cshtml
+++ b/EqUiWebUi/Views/Tableau/Index.cshtml
@@ -41,6 +41,13 @@
             Geplande afstart situatie maximo
         </p>
 
+        <hr />
+
+        <p>
+            <a href="http://biwebreports:8080/reports/vcg/VCG_Manufacturing_And_Supply_Chain/Manufacturing/Maximo7/Defrap_GA_Last_24Hrs.pdf" class="btn btn-info btn-sm">BI-maximo web report&raquo;</a>
+            Defrap_GA_Last_24Hrs
+        </p>
+
         <p class="text-muted">*Als de 'maximo' tools in tableau niet automatisch laden. (chrome) ga naar <a href="https://gensvw1178.gen.volvocars.net/"> equi &raquo;</a>en klik daar op 'advanced' proceed.</p>
     </div>
 </div>
