--- a/EqUiWebUi/Views/c_housekeeping/Index.cshtml
+++ b/EqUiWebUi/Views/c_housekeeping/Index.cshtml
@@ -13,8 +13,9 @@
 {
     columns.Add(c => c.id).Titled("id").InitialSort(GridSortOrder.Asc);
     columns.Add(c => c.c_schedule.name).Titled("scheduleName");
-    columns.Add(c => c.Name).Titled("NameSimple").Css("editTestCollumSimple"); //simple sample
-    columns.Add(c => "<div id="+c.id+">" + c.Name).Encoded(false).Titled("NameFull").Css("editTestCollumFull"); //full code sample
+    columns.Add(c => c.Name).Titled("Name");
+    columns.Add(c => "<p id=" + c.id + " class='editTestCollum1'>" + c.Name).Encoded(false).Titled("NameEdit1");
+    columns.Add(c => "<p id=" + c.id + " class='editTestCollum2'>" + c.Name).Encoded(false).Titled("NameEdit2");
     columns.Add(c => c.SchemaName).Titled("SchemaName");
     columns.Add(c => c.TableName).Titled("TableName");
     columns.Add(c => c.nDaysKeepHistory).Titled("KeepDays");
@@ -67,38 +68,18 @@
 
         //test with Jeditable for in place table editable
         //https://github.com/NicolasCARPi/jquery_jeditable/
-        //Sample code 
+        //Sample code
         https://jeditable.elabftw.net/
 
+
         //simple sample basic
-        $('.editTestCollumSimple').editable('@Url.Action("UpdateLabel")');
+        $('.editTestCollum1').editable('@Url.Action("UpdateLabel")');
 
         //full sample
-        $('.editTestCollumFull').editable('@Url.Action("UpdateLabel")', {
-            cssclass: 'jeditForm',
-            tooltip: 'click to edit me...',
-            width: 'none',
-            height: 'none',
-            submit: 'Ok', //Here!
-            onsubmit: function (settings, original) {
-                oldValue = original.revert;
-            },
-            submitdata: function () {
-                console.log($(this));
-                return {
-                    id: $(this).data('id'),
-                    PropertyName: $(this).data('propertyname')
-                }
-            },
-            callback: function (value, settings) {
-                var jsonData = $.parseJSON(value);
-                if (jsonData.status) {
-                    $(this).text(jsonData.value);
-                }
-                else {
-                    $(this).text(oldValue);
-                }
-            }
-        })
+        $('.editTestCollum2').editable('@Url.Action("UpdateLabel")', {
+            data   : '{"E":"Letter E","F":"Letter F","G":"Letter G", "selected":"F"}',
+            type   : 'select',
+            submit : 'OK'
+        });
     </script>
 }
