added option to filter List alerts by trigger id or location

--- a/EqUiWebUi/Views/Tableau/Index.cshtml
+++ b/EqUiWebUi/Views/Tableau/Index.cshtml
@@ -94,6 +94,11 @@
             Aantal schroeffouten  (HOP)
         </p>
 
+        <p>
+            <a href="~/tableau/EmbeddedDesktop?workbook=Alerts&sheet=StationLayout" class="btn btn-primary btn-sm">Alerts &raquo;</a>
+            Overzicht van alerts
+        </p>
+
     </div>
 </div>
 
