--- a/EqUiWebUi/Areas/Welding/Views/Welding/Index.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/Welding/Index.cshtml
@@ -25,7 +25,7 @@
         @*voorbeeld interne link*@
         <p>
             <a href="~/Alert/Alert/AASPOTIndex" class="btn btn-primary btn-sm">Alerts &raquo;</a>
-            Waarschuwingen gebaseerd op triggers
+            Cylinder/SBCU data triggers
         </p>
     </div>
 </div>
@@ -111,4 +111,3 @@
 </div>
 
 <p></p>
-}
