--- a/EqUiWebUi/Areas/Welding/Views/Qteam/Index.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/Qteam/Index.cshtml
@@ -10,7 +10,7 @@
 <p></p>
 
 <div class="card">
-    <div class="card-header bg-primary">
+    <div class="card-header bg-dark">
         <h5 class="card-title text-white">
             Extra Controles
             <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
@@ -19,13 +19,13 @@
 
     <p></p>
 
-    @MyHtmlHelpers.EquiLink("/Welding/Qteam/rt_ExtraControles", "far fa-file-alt", "ExtraControles", helperText: "omschrijving =>> Automatische lijst met de Extra Controle")
+    @MyHtmlHelpers.EquiLink("/Welding/Qteam/rt_ExtraControles", "fas fa-tachometer-alt", "ExtraControles", helperText: " Automatische lijst met de Extra Controles")
 
 </div>
 <p></p>
 
 <div class="card">
-    <div class="card-header bg-primary">
+    <div class="card-header bg-dark">
         <h5 class="card-title text-white">
             Plannen laatst uitgevoerd
             <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
@@ -34,13 +34,13 @@
 
     <p></p>
 
-    @MyHtmlHelpers.EquiLink("/Welding/Qteam/rt_AutoWorkFlowULPlans", "far fa-file-alt", "Auto Plannen ", helperText: "omschrijving =>> Automatische lijst met de Ultralog plannen laatst uitgevoerd")
+    @MyHtmlHelpers.EquiLink("/Welding/Qteam/rt_AutoWorkFlowULPlans", "fas fa-tachometer-alt", "Auto Plannen ", helperText: "Automatische lijst met de Ultralog plannen laatst uitgevoerd")
 
 </div>
 <p></p>
 
 <div class="card">
-    <div class="card-header bg-primary">
+    <div class="card-header bg-dark">
         <h5 class="card-title text-white">
             Ultralog Rapportering
             <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
@@ -49,7 +49,7 @@
 
     <p></p>
 
-    @MyHtmlHelpers.EquiLink("/Welding/Qteam/ULRapportering", "far fa-file-alt", "Ultralog Rapport Last Week ", helperText: "omschrijving =>> Automatische lijst rapportering Ultralog")
+    @MyHtmlHelpers.EquiLink("/Welding/Qteam/ULRapportering", "fas fa-tachometer-alt", "Ultralog Rapport Last Week ", helperText: "Automatische lijst rapportering Ultralog")
 
 </div>
 <p></p>
