--- a/EqUiWebUi/Areas/Welding/Views/WM/Index.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/WM/Index.cshtml
@@ -36,7 +36,7 @@
     <p>
     <p>
 
-        <a href="~/Welding/WM/_Weldfaultprotocol" class="btn btn-primary btn-sm">WeldFaultProtocol &raquo;</a>
+        <a href="~/Welding/WM/_Weldfaultanalyse" class="btn btn-primary btn-sm">WeldFaultAnalyse &raquo;</a>
         Weldfaultprotocol ---under contruction---
     </p>
 
