--- a/EqUiWebUi/Areas/Welding/Views/Qteam/rt_AutoWorkFlowULPlans.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/Qteam/rt_AutoWorkFlowULPlans.cshtml
@@ -15,7 +15,7 @@
     //.Encoded(false)
     // .RenderedAs(c => "<div class='bg-danger'>Test</div>");
     columns.Add(c => c.Planlenght).Titled("Planlenght");
-    columns.Add(c => c.Last30min_productionStatus).Titled("Last30min_productionStatus").Css("bolded");
+    columns.Add(c => c.Last30min_productionStatus).Titled("Last30min_productionStatus");
     columns.Add(c => c.BuildBody).Titled("BuildBody").InitialSort(GridSortOrder.Desc);
     columns.Add(c => c.WorkGroup).Titled("WorkGroup");
 
@@ -26,7 +26,7 @@
     //{ 20, "20" }, { 40, "40" }, { 80, "80" }, { 100, "100" } };
     pager.ShowPageSizes = true;
 }
-).Sortable().RowCss(model => model.LastnumberFromPlanBusy > 0 ? "red" : "")
+).Sortable().Css("table-hover").RowCss(model => model.LastnumberFromPlanBusy > 0 ? "ani_PulseRed" : "")
 
 
 
@@ -65,31 +65,14 @@
 
 
     </script>
+
     <style>
-        .collapse {
-            display: none;
-        }
+.red { 
+    background-color:#d26161
 
-        .red {
-            background-color: #ff0000;
-        }
-
-        .bolded {
-            font-weight: bold;
-        }
-
-        .green {
-            background-color: rgba(76, 255, 0, 0.21);
-        }
-
-        .Yellow {
-            background-color: rgba(0, 0, 0, 0.36)
-        }
-
-        .redd {
-            background-color: rgba(233, 25, 25, 0.41)
-        }
-    </style>
 
 }
 
+    </style>
+
+}
