--- a/EqUiWebUi/Views/Home/Index.cshtml
+++ b/EqUiWebUi/Views/Home/Index.cshtml
@@ -97,7 +97,7 @@
     <div class="card-body" style="display:none">
         @MyHtmlHelpers.EquiLink("/VASC/Breakdown/getBreakdowns", "fas fa-vial", "getBreakdowns", helperText: "NGAC breakdown details")
         @MyHtmlHelpers.EquiLink("/PJV/pjv/index", "fas fa-vial", "PJV", helperText: "Track changed and modifications on robot process points")
-        @MyHtmlHelpers.EquiLink("/Gadata/Table/BodyTrackWebgrid?DataGrid-body-no-equals=99999999", "fas fa-vial", "Track cars by bodynum", helperText: "weldbolt line only")
+        @MyHtmlHelpers.EquiLink("/VASC/Breakdown/GetJobs?DataGrid-body-no-equals=99999999", "fas fa-vial", "Track cars by bodynum", helperText: "weldbolt line only")
     </div>
 </div>
 
