--- a/EqUiWebUi/Areas/VASC/Views/Breakdown/_getJob.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/Breakdown/_getJob.cshtml
@@ -22,8 +22,7 @@
     columns.Add(c => c.val_breakdownStart).Titled("val").Css("d-none d-lg-table-cell");
     columns.Add(c => c._ev_breakdownAck).Titled("ev_breakdownAck").Filterable(false).Sortable(false);
     columns.Add(c => c.val_breakdownAck).Titled("val").Css("d-none d-lg-table-cell");
-    //columns.Add(c => c.h_alarm_id).Titled("h_alarm_id").Css("d-none d-lg-table-cell");
-    //columns.Add(c => c.rt_alarm_id).Titled("rt_alarm_id").Css("d-none d-lg-table-cell");
+    columns.Add(c => c.rt_alarm.description ?? "" + c.h_alarm.L_error._Logtext ?? "").Titled("Logtext");
 }).Filterable().Sortable().Pageable(pager =>
 {
     pager.RowsPerPage = 10;
